examples/v0.1/errors/uninitialized.nova
name: S

print(name)

// Expected: Variable 'name' accessed before initialization.